updated site title

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Reasons why: Scott is slow.</title>
 	</head>
 	<body>
 		<h1>Some words yo</h1>
 		<h3>Some Names yo: Dylan Schwindt</h3>
-        <h4>Scott is too slow, rides a mt07 smh</h4>
+		<h4>Scott is too slow, rides a mt07 smh</h4>
 	</body>
 </html>
