--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 		<h1>Some words yo</h1>
 		<h3>Some Names yo: Dylan Schwindt</h3>
 		<h4>Scott is too slow, rides a mt07 smh</h4>
+		<div>
+			<img src="#" alt="#" />
+		</div>
 	</body>
 </html>
