--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 	</head>
 	<body>
 		<h1>Some words yo</h1>
-		<h3>Some Names yo: Dylan Schwindt</h3>
-        <h4>Scott is too slow, rides a mt07 smh</h4>
-		<p>Dylan is not actually my son</p>
+		<p> f6 is cool</p>
 	</body>
 </html>
